Show and error when trying to import version 3 xcf files

xcftools cannot handle versions > 2, even though it promises to
try, it always fails. So add the same check instead of > 3 to
our import code.

BUG:485420

(cherry picked from commit 1129754df83ad77e7514aec5ee0053a5ab0ac991)