plugins/impex/xcf/kis_xcf_import.cpp
@@ -152,7 +152,7 @@ KisImportExportErrorCode KisXCFImport::convert(KisDocument *document, QIODevice 
 
     // Decode the data
     if (getBasicXcfInfo() != XCF_OK) {
-        if (XCF.version < 0 || XCF.version > 3) {
+        if (XCF.version < 0 || XCF.version > 2) {
             document->setErrorMessage(i18n("This XCF file is too new; Krita cannot support XCF files written by GIMP 2.9 or newer."));
             return ImportExportCodes::FormatFeaturesUnsupported;
         }
